fixed user profile not centered

--- a/app/src/main/res/css/modules/user_profile.sass
+++ b/app/src/main/res/css/modules/user_profile.sass
@@ -2,17 +2,14 @@
   justify-content: center
   display: flex
   align-items: flex-start
-  .user_contents
-    flex: 1
   .profile
-    flex: 1
-    width: 90%
+    max-width: 50rem
     display: flex
     flex-direction: column
     align-items: center
     background-size: cover
     background-repeat: no-repeat
-    margin: calc(1.1rem + 30px) auto 0 auto
+    margin: calc(1.1rem + 30px) 0 0 0
     padding: 1rem
     position: relative
     *
